# FLowSocial

./: .gitignore
FLowSocial/backend/: requirements.txt  server.py
FLowSocial/backend/static/: main.js  script.js
FLowSocial/backend/templates/: index.html  styles.css
project/: .gitignore  ReadMe.md  main.py  pyproject.toml
project/api/: routes.py  server.py
project/data/: data_download.py  data_exploration.py
project/data/metadata/: hierarchy.json
project/fl_model/: client.py  server.py  test.py  utils.py
project/models/: secure_server.py  text_recommender.py
project/models_v2/: clustering.py  text_recommender.py
project/testing_models/: images_pipeline.py  secure_client.py  test.py
research/: Explainable AI (XAI).docx  attention_model.py
research/data/: FL.md  overall_design.excalidraw  test.py  test2.py
research/papers/: IMAGE REC SYSTEM- FL DRAFT 1.docx
research/presentation/: IPD_SEM5_PRESENTATION.pptx  IPD_sem5.pptx
